--- a/giftos-html/shop.html
+++ b/giftos-html/shop.html
@@ -13,8 +13,8 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
-  <title>
-    Giftos
+  <title> 
+    Giftos dairy
   </title>
 
   <!-- slider stylesheet -->
