--- a/giftos-html/contact.html
+++ b/giftos-html/contact.html
@@ -175,7 +175,7 @@
               <form action="#">
                 <input type="email" placeholder="Enter your email">
                 <button>
-                  Subscribe
+                  Subscribe dery
                 </button>
               </form>
             </div>
@@ -185,7 +185,7 @@
               NEED HELP
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
+              Lorem ipsum dolor sit amet,perspiciatis nulla reiciendis, rem, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
